AJUSTANDO OUTPU